# toy-diffusion

./: .gitignore  LICENSE.txt  README.md  manage_train.sh  pyproject.toml  requirements.txt  sample.toml
configs/: toy_example.yaml
scripts/: anime_faces.py  consistency_models.py  encode_latents.py  evaluate_checkpoint.py  finetune.py  finetune_anime_faces.py  inference.py  lr_search_anime.py  main.py  manifold.py  overfit_one_batch.py  profile_model.py  reflow.py  reflow_anime.py
src/toy_diffusion/: evaluation.py  losses.py  trainer.py
src/toy_diffusion/data/: coupling.py  image.py  synthetic.py
src/toy_diffusion/models/: aux_models.py  cm.py  dit.py  dual_stream.py  edm_model.py  efficient_unet.py  layers.py  mlp.py  sprint.py  unet.py
src/toy_diffusion/paths/: sampling.py  scheduler.py
src/toy_diffusion/ui/: app.py  inference_app.py  visualizer.py
src/toy_diffusion/utils/: act_grad_checkpointing.py  evaluation_utils.py  logging_utils.py  profiling_utils.py  trainer_utils.py  visualization.py
tests/: derivations.py  variance_preserve.py
